--- a/manufacturer/databricks.yml
+++ b/manufacturer/databricks.yml
@@ -29,19 +29,20 @@ targets:
     mode: development
     default: true
     workspace:
-      host: https://dbc-9f4d005b-1483.cloud.databricks.com
+      # host: ${workspace.host}
+      # host: https://dbc-dcffaa68-27b1.cloud.databricks.com
     variables:
       catalog: dev
       schema: dev
   prod:
     mode: production
     workspace:
-      host: https://dbc-9f4d005b-1483.cloud.databricks.com
+      # host: https://dbc-dcffaa68-27b1.cloud.databricks.com
       # We explicitly deploy to /Workspace/Users/thanyarkottary2003@gmail.com to make sure we only have a single copy.
-      root_path: /Workspace/Users/thanyarkottary2003@gmail.com/.bundle/${bundle.name}/${bundle.target}
+      root_path: /Workspace/Users/${workspace.current_user.userName}/.bundle/${bundle.name}/${bundle.target}
     variables:
       catalog: dev
       schema: prod
     permissions:
-      - user_name: thanyarkottary2003@gmail.com
+      - user_name: ${workspace.current_user.userName}
         level: CAN_MANAGE
