--- a/manufacturer/pyproject.toml
+++ b/manufacturer/pyproject.toml
@@ -1,7 +1,8 @@
 [project]
 name = "manufacturer"
 version = "0.0.1"
-authors = [{ name = "thanyarkottary2003@gmail.com" }]
+# authors = [{ name = "mugunthan2783@gmail.com" }]
+authors = [{ name = "${workspace.current_user.userName}" }]
 requires-python = ">=3.10,<=3.13"
 dependencies = [
     # Any dependencies for jobs and pipelines in this project can be added here
