--- a/manufacturer/resources/pipelines/consumer_orders/consumer_order_bronze.pipeline.yml
+++ b/manufacturer/resources/pipelines/consumer_orders/consumer_order_bronze.pipeline.yml
@@ -4,9 +4,9 @@ resources:
       name: consumer_order_bronze
       libraries:
         - glob:
-            include: ../../src/consumer_orders/consumer_order_bronze/transformations/**
+            include: ../../../src/consumer_orders/consumer_order_bronze/transformations/**
       serverless: true
       catalog: dev
       schema: 00_landing
-      root_path: ../../src/consumer_orders/consumer_order_bronze
+      root_path: ../../../src/consumer_orders/consumer_order_bronze
 
