--- a/manufacturer/resources/pipelines/distributor/distributor_bronze.pipeline.yml
+++ b/manufacturer/resources/pipelines/distributor/distributor_bronze.pipeline.yml
@@ -4,8 +4,8 @@ resources:
       name: distributor_bronze
       libraries:
         - glob:
-            include: ../../src/distributor/distributor_bronze/transformations/**
+            include: ../../../src/distributor/distributor_bronze/transformations/**
       serverless: true
       catalog: dev
       schema: 00_landing
-      root_path: ../../src/distributor/distributor_bronze
+      root_path: ../../../src/distributor/distributor_bronze
