distributor sale order job

--- a/manufacturer/databricks.yml
+++ b/manufacturer/databricks.yml
@@ -6,7 +6,8 @@ bundle:
 
 include:
   - resources/*.yml
-  - resources/**/*.yml
+  - resources/*/*.yml
+  - resources/*/*/*.yml
 
 artifacts:
   python_artifact:
