--- a/manufacturer/resources/pipelines/distributor_sale_order/distributor_sale_order_bronze.pipeline.yml
+++ b/manufacturer/resources/pipelines/distributor_sale_order/distributor_sale_order_bronze.pipeline.yml
@@ -7,5 +7,5 @@ resources:
             include: ../../../src/distributor_sale_order/distributor_sale_order_bronze/transformations/**
       serverless: true
       catalog: dev
-      schema: ${workspace.current_user.short_name}
+      schema: 00_landing
       root_path: ../../../src/distributor_sale_order/distributor_sale_order_bronze
