--- a/manufacturer/resources/jobs/distributor_invoice.job.yml
+++ b/manufacturer/resources/jobs/distributor_invoice.job.yml
@@ -3,7 +3,7 @@ resources:
     distributor_invoice:
       name: distributor_invoice
       trigger:
-        pause_status: UNPAUSED
+        pause_status: PAUSED
         file_arrival:
           url: /Volumes/dev/00_landing/data/distributor_invoice/
       tasks:
