--- a/manufacturer/resources/jobs/product.job.yml
+++ b/manufacturer/resources/jobs/product.job.yml
@@ -3,7 +3,7 @@ resources:
     product:
       name: product
       trigger:
-        pause_status: UNPAUSED
+        pause_status: PAUSED
         file_arrival:
           url: /Volumes/dev/00_landing/data/product/
       tasks:
