--- a/manufacturer/resources/jobs/consumer.job.yml
+++ b/manufacturer/resources/jobs/consumer.job.yml
@@ -3,7 +3,7 @@ resources:
     consumer:
       name: consumer
       trigger:
-        pause_status: UNPAUSED
+        pause_status: PAUSED
         file_arrival:
           url: /Volumes/dev/00_landing/data/consumer/
       tasks:
