--- a/manufacturer/resources/jobs/distributor.job.yml
+++ b/manufacturer/resources/jobs/distributor.job.yml
@@ -3,7 +3,7 @@ resources:
     distributor:
       name: distributor
       trigger:
-        pause_status: UNPAUSED
+        pause_status: PAUSED
         file_arrival:
           url: /Volumes/dev/00_landing/data/distributor/
       tasks:
