Refactor job and pipeline configurations for consumer, distributor, and inventory entities. Introduced new bronze and silver transformation templates, streamlined job definitions, and updated file paths for data sources. Removed obsolete transformation scripts for cleaner architecture.

--- a/manufacturer/resources/pipelines/consumer/consumer_bronze.pipeline.yml
+++ b/manufacturer/resources/pipelines/consumer/consumer_bronze.pipeline.yml
@@ -3,10 +3,9 @@ resources:
     consumer_bronze:
       name: consumer_bronze
       libraries:
-        - glob:
-            include: ../../../src/consumer/consumer_bronze/transformations/**
+      - glob:
+          include: ../../../src/consumer/consumer_bronze/transformations/**
       serverless: true
-      catalog: dev
+      catalog: ${var.catalog}
       schema: 00_landing
       root_path: ../../../src/consumer/consumer_bronze
-
