--- a/manufacturer/resources/pipelines/distributor_sale_order/distributor_sale_order_bronze.pipeline.yml
+++ b/manufacturer/resources/pipelines/distributor_sale_order/distributor_sale_order_bronze.pipeline.yml
@@ -3,9 +3,9 @@ resources:
     distributor_sale_order_bronze:
       name: distributor_sale_order_bronze
       libraries:
-        - glob:
-            include: ../../../src/distributor_sale_order/distributor_sale_order_bronze/transformations/**
+      - glob:
+          include: ../../../src/distributor_sale_order/distributor_sale_order_bronze/transformations/**
       serverless: true
-      catalog: dev
+      catalog: ${var.catalog}
       schema: 00_landing
       root_path: ../../../src/distributor_sale_order/distributor_sale_order_bronze
