--- a/manufacturer/resources/pipelines/product/product_bronze.pipeline.yml
+++ b/manufacturer/resources/pipelines/product/product_bronze.pipeline.yml
@@ -3,10 +3,9 @@ resources:
     product_bronze:
       name: product_bronze
       libraries:
-        - glob:
-            include: ../../../src/product/product_bronze/transformations/**
+      - glob:
+          include: ../../../src/product/product_bronze/transformations/**
       serverless: true
-      catalog: dev
+      catalog: ${var.catalog}
       schema: 00_landing
       root_path: ../../../src/product/product_bronze
-
