Add manufacturer DLT meta framework and join configurations for streamlined pipeline creation
- Introduced a new `dlt_meta_framework.py` to encapsulate common pipeline creation logic for landing, bronze, and silver layers.
- Added `join_configs.py` to manage SQL join configurations for various entities.
- Updated transformation scripts across consumer, distributor, and inventory pipelines to utilize the new framework, enhancing maintainability and reducing code duplication.
- Implemented metadata management in `metadata.py` for structured entity definitions and schema management.

--- a/manufacturer/resources/pipelines/consumer_orders/consumer_orders_silver.pipeline.yml
+++ b/manufacturer/resources/pipelines/consumer_orders/consumer_orders_silver.pipeline.yml
@@ -5,6 +5,8 @@ resources:
       libraries:
         - glob:
             include: ../../../src/consumer_orders/consumer_orders_silver/transformations/**
+        - glob:
+            include: ../../../src/manufacturer/**
       serverless: true
       catalog: dev
       schema: 02_silver
