--- a/manufacturer/resources/pipelines/distributor_invoice/distributor_invoice_bronze.pipeline.yml
+++ b/manufacturer/resources/pipelines/distributor_invoice/distributor_invoice_bronze.pipeline.yml
@@ -5,9 +5,9 @@ resources:
       libraries:
         - glob:
             include: ../../../src/distributor_invoice/distributor_invoice_bronze/transformations/**
+        - glob:
+            include: ../../../src/manufacturer/**
       serverless: true
       catalog: dev
       schema: 00_landing
       root_path: ../../../src/distributor_invoice/distributor_invoice_bronze
-
-# /Workspace/Users/mugunthan2783@gmail.com/cpg_manufacturer/manufacturer/src/distributor_invoice/distributor_invoice_bronze/transformations
