--- a/manufacturer/resources/pipelines/consumer_orders/consumer_order_items_bronze.pipeline.yml
+++ b/manufacturer/resources/pipelines/consumer_orders/consumer_order_items_bronze.pipeline.yml
@@ -5,6 +5,8 @@ resources:
       libraries:
         - glob:
             include: ../../../src/consumer_orders/consumer_order_items_bronze/transformations/**
+        - glob:
+            include: ../../../src/manufacturer/**
       serverless: true
       catalog: dev
       schema: 00_landing
