--- a/manufacturer/resources/pipelines/inventory/inventory_silver.pipeline.yml
+++ b/manufacturer/resources/pipelines/inventory/inventory_silver.pipeline.yml
@@ -5,6 +5,8 @@ resources:
       libraries:
         - glob:
             include: ../../../src/inventory/inventory_silver/transformations/**
+        - glob:
+            include: ../../../src/manufacturer/**
       serverless: true
       catalog: dev
       schema: 02_silver
