--- a/manufacturer/resources/pipelines/product/product_silver.pipeline.yml
+++ b/manufacturer/resources/pipelines/product/product_silver.pipeline.yml
@@ -5,6 +5,8 @@ resources:
       libraries:
         - glob:
             include: ../../../src/product/product_silver/transformations/**
+        - glob:
+            include: ../../../src/manufacturer/**
       serverless: true
       catalog: dev
       schema: 02_silver
