product_manager_pov done

--- a/manufacturer/resources/jobs/gold_product.job.yml
+++ b/manufacturer/resources/jobs/gold_product.job.yml
@@ -1,23 +1,21 @@
 resources:
   jobs:
-    gold_supply:
-      name: Gold Supply
+    gold_product:
+      name: gold_product
       trigger:
         pause_status: PAUSED
         table_update:
           table_names:
-            - dev.02_silver.inventory_mv
+            - dev.02_silver.distributor_invoice_mv
+            - dev.02_silver.distributor_sale_order_mv
             - dev.02_silver.product_mv
             - dev.02_silver.consumer_orders_mv
-            - dev.02_silver.distributor_sale_order_mv
-            - dev.02_silver.consumer_mv
-            - dev.02_silver.distributor_mv
           condition: ANY_UPDATED
       tasks:
-        - task_key: gold_supply_notebook
+        - task_key: gold_product_notebook
           notebook_task:
-            notebook_path: ../../src/gold_supply/gold.ipynb
+            notebook_path: ../../src/gold_product/product_sales
       queue:
         enabled: true
       performance_target: PERFORMANCE_OPTIMIZED
-
+ 
