Update pipeline configurations to unify root paths across consumer, distributor, and inventory pipelines
- Modified `root_path` in multiple pipeline YAML files to point to a common source directory, enhancing consistency and simplifying path management.
- Adjusted `dlt_meta_framework.py` to include a function for obtaining the Spark session, improving the framework's robustness and usability.

--- a/manufacturer/resources/pipelines/consumer/consumer_bronze.pipeline.yml
+++ b/manufacturer/resources/pipelines/consumer/consumer_bronze.pipeline.yml
@@ -10,5 +10,5 @@ resources:
       serverless: true
       catalog: dev
       schema: 00_landing
-      root_path: ../../../src/consumer/consumer_bronze
+      root_path: ../../../src
 
