--- a/manufacturer/resources/pipelines/consumer_orders/consumer_order_items_bronze.pipeline.yml
+++ b/manufacturer/resources/pipelines/consumer_orders/consumer_order_items_bronze.pipeline.yml
@@ -10,5 +10,5 @@ resources:
       serverless: true
       catalog: dev
       schema: 00_landing
-      root_path: ../../../src/consumer_orders/consumer_order_items_bronze
+      root_path: ../../../src
 
