--- a/manufacturer/resources/pipelines/distributor/distributor_silver.pipeline.yml
+++ b/manufacturer/resources/pipelines/distributor/distributor_silver.pipeline.yml
@@ -10,4 +10,4 @@ resources:
       serverless: true
       catalog: dev
       schema: 02_silver
-      root_path: ../../../src/distributor/distributor_silver
+      root_path: ../../../src
