--- a/manufacturer/resources/pipelines/inventory/inventory_bronze.pipeline.yml
+++ b/manufacturer/resources/pipelines/inventory/inventory_bronze.pipeline.yml
@@ -10,4 +10,4 @@ resources:
       serverless: true
       catalog: dev
       schema: 00_landing
-      root_path: ../../../src/inventory/inventory_bronze
+      root_path: ../../../src
