--- a/manufacturer/pyproject.toml
+++ b/manufacturer/pyproject.toml
@@ -28,3 +28,8 @@ build-backend = "hatchling.build"
 
 [tool.black]
 line-length = 125
+
+[tool.pytest.ini_options]
+cache_dir = "/tmp/.pytest_cache"
+pythonpath = ["src"]
+testpaths = ["tests"]
