--- a/manufacturer/resources/jobs/gold_sales.job.yml
+++ b/manufacturer/resources/jobs/gold_sales.job.yml
@@ -1,7 +1,7 @@
 resources:
   jobs:
     gold_sales:
-      name: Gold Sales
+      name: gold_sales
       trigger:
         pause_status: PAUSED
         table_update:
