--- a/manufacturer/resources/jobs/distributor_sale_order.job.yml
+++ b/manufacturer/resources/jobs/distributor_sale_order.job.yml
@@ -12,18 +12,16 @@ resources:
             pipeline_id: ${resources.pipelines.distributor_sale_order_bronze.id}
             full_refresh: false
         - task_key: distributor_sale_order_item_bronze
+          depends_on:
+            - task_key: distributor_sale_order_bronze
           pipeline_task:
             pipeline_id: ${resources.pipelines.distributor_sale_order_item_bronze.id}
             full_refresh: false
         - task_key: distributor_sale_order_silver
           depends_on:
-            - task_key: distributor_sale_order_bronze
             - task_key: distributor_sale_order_item_bronze
           pipeline_task:
             pipeline_id: ${resources.pipelines.distributor_sale_order_silver.id}
       queue:
         enabled: true
       performance_target: PERFORMANCE_OPTIMIZED
-      # email_notifications:
-      #   on_failure:
-      #     - mugunthan2783@gmail.com
