--- a/manufacturer/resources/pipelines/distributor_invoice/distributor_invoice_item_bronze.pipeline.yml
+++ b/manufacturer/resources/pipelines/distributor_invoice/distributor_invoice_item_bronze.pipeline.yml
@@ -7,7 +7,7 @@ resources:
             include: ../../../src/distributor_invoice/distributor_invoice_item_bronze/transformations/**
       serverless: true
       catalog: dev
-      schema: 01_bronze
+      schema: 00_landing
       root_path: ../../../src/distributor_invoice/distributor_invoice_item_bronze
 
       # /Workspace/Users/mugunthan2783@gmail.com/cpg_manufacturer/manufacturer/src/distributor_invoice/distributor_invoice_item_bronze/transformations
