--- a/manufacturer/databricks.yml
+++ b/manufacturer/databricks.yml
@@ -16,10 +16,23 @@ artifacts:
 
 # Variable declarations. These variables are assigned in the dev/prod targets below.
 variables:
-  catalog:
-    description: The catalog to use
-  schema:
-    description: The schema to use
+  catalog: 
+    # default: dev
+    default: ${bundle.target}
+  schema: 
+    description: onnum illa
+  landing:
+    default: 00_landing
+  bronze:
+    default: 01_bronze
+  silver:
+    default: 02_silver
+  gold_product:
+    default: 03_gold_product
+  gold_supply:
+    default: 03_gold_supply
+  gold_sales:
+    default: 03_gold_sales
 
 targets:
   dev:
@@ -33,7 +46,7 @@ targets:
       # host: ${workspace.host}
       # host: https://dbc-dcffaa68-27b1.cloud.databricks.com
     variables:
-      catalog: dev
+      # catalog: dev
       schema: dev
   prod:
     mode: production
@@ -42,7 +55,7 @@ targets:
       # We explicitly deploy to /Workspace/Users/thanyarkottary2003@gmail.com to make sure we only have a single copy.
       root_path: /Workspace/Users/${workspace.current_user.userName}/.bundle/${bundle.name}/${bundle.target}
     variables:
-      catalog: dev
+      # catalog: dev
       schema: prod
     permissions:
       - user_name: ${workspace.current_user.userName}
