--- a/manufacturer/resources/jobs/initial.job.yml
+++ b/manufacturer/resources/jobs/initial.job.yml
@@ -3,42 +3,42 @@ resources:
     initial:
       name: initial
       tasks:
-        - task_key: task1
-          run_job_task:
-            job_id: ${resources.jobs.consumer.id} 
-        - task_key: task2
-          depends_on:
-            - task_key: task1
-          run_job_task:
-            job_id: ${resources.jobs.consumer_orders.id}
-        - task_key: task3
-          depends_on:
-            - task_key: task2
-          run_job_task:
-            job_id: ${resources.jobs.distributor.id}
-        - task_key: task4
-          depends_on:
-            - task_key: task3
-          run_job_task:
-            job_id: ${resources.jobs.distributor_invoice.id}
-        - task_key: task5
-          depends_on:
-            - task_key: task4
-          run_job_task:
-            job_id: ${resources.jobs.distributor_sale_order.id}
-        - task_key: task6
-          depends_on:
-            - task_key: task5
-          run_job_task:
-            job_id: ${resources.jobs.inventory.id}
-        - task_key: task7
-          depends_on:
-            - task_key: task6
-          run_job_task:
-            job_id: ${resources.jobs.product.id}
+        # - task_key: task1
+        #   run_job_task:
+        #     job_id: ${resources.jobs.consumer.id} 
+        # - task_key: task2
+        #   depends_on:
+        #     - task_key: task1
+        #   run_job_task:
+        #     job_id: ${resources.jobs.consumer_orders.id}
+        # - task_key: task3
+        #   depends_on:
+        #     - task_key: task2
+        #   run_job_task:
+        #     job_id: ${resources.jobs.distributor.id}
+        # - task_key: task4
+        #   depends_on:
+        #     - task_key: task3
+        #   run_job_task:
+        #     job_id: ${resources.jobs.distributor_invoice.id}
+        # - task_key: task5
+        #   depends_on:
+        #     - task_key: task4
+        #   run_job_task:
+        #     job_id: ${resources.jobs.distributor_sale_order.id}
+        # - task_key: task6
+        #   depends_on:
+        #     - task_key: task5
+        #   run_job_task:
+        #     job_id: ${resources.jobs.inventory.id}
+        # - task_key: task7
+        #   depends_on:
+        #     - task_key: task6
+        #   run_job_task:
+        #     job_id: ${resources.jobs.product.id}
         - task_key: task8
-          depends_on:
-            - task_key: task7
+          # depends_on:
+          #   - task_key: task7
           notebook_task:
             notebook_path: ../../src/intial/Initial_setup.ipynb
             source: WORKSPACE
