--- a/manufacturer/resources/jobs/bootstrap.job.yml
+++ b/manufacturer/resources/jobs/bootstrap.job.yml
@@ -11,44 +11,44 @@ resources:
               schema: ${var.landing}
               volume: ${var.input_volume}
             source: WORKSPACE
-        # - task_key: task1
-        #   run_job_task:
-        #     job_id: ${resources.jobs.consumer.id} 
-        #   depends_on:
-        #     - task_key: task0
-        # - task_key: task2
-        #   depends_on:
-        #     - task_key: task1
-        #   run_job_task:
-        #     job_id: ${resources.jobs.consumer_orders.id}
-        # - task_key: task3
-        #   depends_on:
-        #     - task_key: task2
-        #   run_job_task:
-        #     job_id: ${resources.jobs.distributor.id}
-        # - task_key: task4
-        #   depends_on:
-        #     - task_key: task3
-        #   run_job_task:
-        #     job_id: ${resources.jobs.distributor_invoice.id}
-        # - task_key: task5
-        #   depends_on:
-        #     - task_key: task4
-        #   run_job_task:
-        #     job_id: ${resources.jobs.distributor_sale_order.id}
-        # - task_key: task6
-        #   depends_on:
-        #     - task_key: task5
-        #   run_job_task:
-        #     job_id: ${resources.jobs.inventory.id}
-        # - task_key: task7
-        #   depends_on:
-        #     - task_key: task6
-        #   run_job_task:
-        #     job_id: ${resources.jobs.product.id}
+        - task_key: task1
+          run_job_task:
+            job_id: ${resources.jobs.consumer.id} 
+          depends_on:
+            - task_key: task0
+        - task_key: task2
+          depends_on:
+            - task_key: task1
+          run_job_task:
+            job_id: ${resources.jobs.consumer_orders.id}
+        - task_key: task3
+          depends_on:
+            - task_key: task2
+          run_job_task:
+            job_id: ${resources.jobs.distributor.id}
+        - task_key: task4
+          depends_on:
+            - task_key: task3
+          run_job_task:
+            job_id: ${resources.jobs.distributor_invoice.id}
+        - task_key: task5
+          depends_on:
+            - task_key: task4
+          run_job_task:
+            job_id: ${resources.jobs.distributor_sale_order.id}
+        - task_key: task6
+          depends_on:
+            - task_key: task5
+          run_job_task:
+            job_id: ${resources.jobs.inventory.id}
+        - task_key: task7
+          depends_on:
+            - task_key: task6
+          run_job_task:
+            job_id: ${resources.jobs.product.id}
         - task_key: task8
-          # depends_on:
-          #   - task_key: task7
+          depends_on:
+            - task_key: task7
           notebook_task:
             notebook_path: ../../src/bootstrap/trigger_update.ipynb
             source: WORKSPACE
