Update gold sales and supply job configurations to correct schema references and enhance SQL query data types for improved accuracy.

--- a/manufacturer/resources/jobs/gold_supply.job.yml
+++ b/manufacturer/resources/jobs/gold_supply.job.yml
@@ -20,7 +20,7 @@ resources:
             base_parameters:
               catalog: ${var.catalog}
               silver_schema: ${var.silver}
-              gold_schema: ${var.gold_product}
+              gold_schema: ${var.gold_supply}
       queue:
         enabled: true
       performance_target: PERFORMANCE_OPTIMIZED
