--- a/manufacturer/resources/jobs/bootstrap.job.yml
+++ b/manufacturer/resources/jobs/bootstrap.job.yml
@@ -3,19 +3,22 @@ resources:
     bootstrap:
       name: bootstrap
       tasks:
-        - task_key: task0
+        - task_key: setup
           notebook_task:
             notebook_path: ../../src/bootstrap/setup.ipynb
             base_parameters:
-              catalog: ${var.catalog}
-              schema: ${var.landing}
               volume: ${var.input_volume}
+              catalog: ${var.catalog}
+              landing_schema: ${var.landing}
+              bronze_schema: ${var.bronze}
+              silver_schema: ${var.silver}
             source: WORKSPACE
         - task_key: task1
           run_job_task:
             job_id: ${resources.jobs.consumer.id} 
           depends_on:
-            - task_key: task0
+            - task_key: setup
+          run_if: AT_LEAST_ONE_FAILED
         - task_key: task2
           depends_on:
             - task_key: task1
@@ -49,6 +52,8 @@ resources:
         - task_key: task8
           depends_on:
             - task_key: task7
+            - task_key: setup
+          run_if: AT_LEAST_ONE_SUCCESS
           notebook_task:
             notebook_path: ../../src/bootstrap/trigger_update.ipynb
             source: WORKSPACE
