--- a/manufacturer/resources/pipelines/consumer/consumer_silver.pipeline.yml
+++ b/manufacturer/resources/pipelines/consumer/consumer_silver.pipeline.yml
@@ -11,5 +11,5 @@ resources:
       root_path: ../../../src/consumer/consumer_silver
       configuration:
         catalog: ${var.catalog}
-        target_schema: ${var.bronze}
+        target_schema: ${var.silver}
 
