--- a/manufacturer/databricks.yml
+++ b/manufacturer/databricks.yml
@@ -25,6 +25,7 @@ variables:
     default: ${bundle.target}
   schema: 
     description: The schema used for reading or writing data.
+    default: demo
   input_volume:
     default: data
   landing:
@@ -53,7 +54,7 @@ targets:
       # host: https://dbc-dcffaa68-27b1.cloud.databricks.com
     variables:
       # catalog: dev
-      schema: dev
+      # schema: demo
   prod:
     mode: production
     presets:
@@ -64,7 +65,7 @@ targets:
       root_path: /Workspace/Users/${workspace.current_user.userName}/.bundle/${bundle.name}/${bundle.target}
     variables:
       # catalog: dev
-      # schema: prod
+      # schema: demo
     permissions:
       - user_name: ${workspace.current_user.userName}
         level: CAN_MANAGE
