--- a/manufacturer/resources/pipelines/distributor/distributor_silver.pipeline.yml
+++ b/manufacturer/resources/pipelines/distributor/distributor_silver.pipeline.yml
@@ -6,6 +6,9 @@ resources:
         - glob:
             include: ../../../src/distributor/distributor_silver/transformations/**
       serverless: true
-      catalog: dev
-      schema: 02_silver
+      catalog: ${var.catalog}
+      schema: ${var.bronze}
       root_path: ../../../src/distributor/distributor_silver
+      configuration:
+        catalog: ${var.catalog}
+        target_schema: ${var.silver}
