--- a/manufacturer/resources/pipelines/distributor_invoice/distributor_invoice_silver.pipeline.yml
+++ b/manufacturer/resources/pipelines/distributor_invoice/distributor_invoice_silver.pipeline.yml
@@ -6,8 +6,11 @@ resources:
         - glob:
             include: ../../../src/distributor_invoice/distributor_invoice_silver/transformations/**
       serverless: true
-      catalog: dev
-      schema: 02_silver
+      catalog: ${var.catalog}
+      schema: ${var.bronze}
       root_path: ../../../src/distributor_invoice/distributor_invoice_silver
+      configuration:
+        catalog: ${var.catalog}
+        target_schema: ${var.silver}
 
       # /Workspace/Users/mugunthan2783@gmail.com/cpg_manufacturer/manufacturer/src/distributor_invoice/distributor_invoice_silver/transformations
