--- a/manufacturer/resources/pipelines/distributor_sale_order/distributor_sale_order_silver.pipeline.yml
+++ b/manufacturer/resources/pipelines/distributor_sale_order/distributor_sale_order_silver.pipeline.yml
@@ -6,6 +6,9 @@ resources:
         - glob:
             include: ../../../src/distributor_sale_order/distributor_sale_order_silver/transformations/**
       serverless: true
-      catalog: dev
-      schema: 02_silver
+      catalog: ${var.catalog}
+      schema: ${var.bronze}
       root_path: ../../../src/distributor_sale_order/distributor_sale_order_silver
+      configuration:
+        catalog: ${var.catalog}
+        target_schema: ${var.silver}
