--- a/manufacturer/resources/pipelines/inventory/inventory_bronze.pipeline.yml
+++ b/manufacturer/resources/pipelines/inventory/inventory_bronze.pipeline.yml
@@ -6,6 +6,11 @@ resources:
         - glob:
             include: ../../../src/inventory/inventory_bronze/transformations/**
       serverless: true
-      catalog: dev
-      schema: 00_landing
+      catalog: ${var.catalog}
+      schema: ${var.landing}
       root_path: ../../../src/inventory/inventory_bronze
+      configuration:
+        catalog: ${var.catalog}
+        pipeline_schema: ${var.landing}
+        target_schema: ${var.bronze}
+        volume: ${var.input_volume}
