--- a/manufacturer/resources/pipelines/product/product_silver.pipeline.yml
+++ b/manufacturer/resources/pipelines/product/product_silver.pipeline.yml
@@ -6,7 +6,10 @@ resources:
         - glob:
             include: ../../../src/product/product_silver/transformations/**
       serverless: true
-      catalog: dev
-      schema: 02_silver
+      catalog: ${var.catalog}
+      schema: ${var.bronze}
       root_path: ../../../src/product/product_silver
+      configuration:
+        catalog: ${var.catalog}
+        target_schema: ${var.silver}
 
