--- a/manufacturer/resources/pipelines/distributor/distributor_bronze.pipeline.yml
+++ b/manufacturer/resources/pipelines/distributor/distributor_bronze.pipeline.yml
@@ -6,6 +6,13 @@ resources:
         - glob:
             include: ../../../src/distributor/distributor_bronze/transformations/**
       serverless: true
-      catalog: dev
-      schema: 00_landing
-      root_path: ../../../src/distributor/distributor_bronze
+      catalog: ${var.catalog}
+      schema: ${var.landing}
+      # root_path: ../../../src/distributor/distributor_bronze
+      root_path: ../../../src/
+      configuration:
+        catalog: ${var.catalog}
+        pipeline_schema: ${var.landing}
+        target_schema: ${var.bronze}
+        volume: ${var.input_volume}
+        metadata_path: ${var.metadata_path}
